--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>edu-vista-player</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <title>Belajar Alkitab</title>
+    <meta name="description" content="Platform untuk Bertumbuh dalam Iman melalui Pembelajaran Alkitab yang Mudah dan Interaktif." />
+    <meta name="author" content="Belajar Alkitab" />
+    <!-- Update the OG image link to match your branding -->
+    <meta property="og:image" content="https://images.unsplash.com/photo-1502051400-dad986bddd4f?q=80&w=2871&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+
+    <!-- Favicon link -->
+    <link rel="icon" href="https://img.icons8.com/?size=100&id=41414&format=png&color=000000" type="image/x-icon" />
   </head>
 
   <body>
